2008-02-06  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/submission/all_events.rxml: Add Disclaimer

2008-02-05  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/layouts/submission.rxml: Use conference.title

	* rails/app/helpers/submission_helper.rb
	(SubmissionHelper::sanitize_track): copied from schedule
	(SubmissionHelper::event_image): dito

	* rails/app/views/submission/_sidebar.rxml: s/Events/Own Events/
	Add All Events link

	* rails/app/views/submission/all_events.rxml: Added, showing all events

	* rails/app/views/submission/_event_general.rxml: Use the correct
	state descriptions

2008-02-02  Joerg Jaspert  <joerg@debian.org>

	* rails/app/controllers/pentabarf_controller.rb
	(PentabarfController::event): Fix "nothing found in dc_events"

	* rails/app/views/meditation.rhtml: Add pentabarf contact address

	* rails/app/models/event.rb: drop f_ from two flags, so they can
	be saved.

	* rails/app/views/pentabarf/find_conference.rxml: Fix syntax for
	Ajax thingie

	* rails/app/views/submission/_person_general.rxml: add participant
	mapping thingie to select a participant category

	* rails/app/views/submission/_person_travel.rxml: add some
	explanation for travel_[to|from]_venue
	hide departure_from, not _to

	* rails/config/routes.rb: Place it all below /penta/

	* rails/app/views/layouts/submission.rxml: use title instead of acronym

2008-02-01  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/submission/_person_availability.rxml: Show real
	dates and date names

	* rails/app/views/pentabarf/_person_travel.rxml: Select only items
	for the current conference

	* rails/app/views/submission/_sidebar.rxml: s/Person/Registration detail/
	Add /Paper

	* rails/app/views/submission/_person_general.rxml: wording fixes
	Select only items for the current conference

2008-01-31  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/pentabarf/_person_travel.rxml: Hide
	arrival_to/departure_to fields
	Add travel_from_venue checkbox
